Fixes continuation line for messages not showing on the ticket status view

--- a/onegov/org/theme/styles/org.scss
+++ b/onegov/org/theme/styles/org.scss
@@ -5459,12 +5459,17 @@ h2 + div.timeline {
     Ticket status page message adjustments
 */
 .status-chat {
-    .title,
-    .recipient-info {
-        display: none;
+    .title {
+        // use this instead of visibility:hidden or display:none - we do not
+        // want this to bread by screen-readers, but we also want the element
+        // to stick around so the line defined by ::before stays
+        border: 0;
+        height: 0;
+        padding: 0;
+        width: 0;
     }
 
-    .message {
-        padding-top: .5rem;
+    .recipient-info {
+        display: none;
     }
 }
